--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/">
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="/PakDok_Pwa/">
+
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Pak Dok – Outils étudiants et professionnels : CV, lettres, rapports, ordonnances et signatures numériques.">
+  <meta name="description" content="A new Flutter project.">
 
-  <!-- Android / Mobile Web App -->
+  <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#1E88E5">
-
-  <!-- iOS / Safari meta tags -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Pak Dok">
-  
-  <!-- iOS icons -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="paydoc">
   <link rel="apple-touch-icon" href="icons/apple-192.png">
-  <link rel="apple-touch-icon" sizes="512x512" href="icons/apple-512.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <!-- PWA manifest -->
+  <title>paydoc</title>
   <link rel="manifest" href="manifest.json">
-
-  <title>Pak Dok</title>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
